# AutoWSGR-OCR

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: main.yml
src/: image.rs  interface.rs  lib.rs  locator.rs  recognize_map.rs  test.rs
src/recognize_enemy/: character_image.rs  mod.rs  templates.rs
vessel-type/: Cargo.toml
vessel-type/src/: lib.rs
